# secrec-stdlib

./: .gitignore  .mailmap  CMakeLists.txt  SharemindStdlibConfig.cmake.in  SharemindStdlibConfigVersion.cmake.in  version.py  version.sh
docs/: Doxyfile  Doxyfile.in  README  build_html.sh
lib/: a3p_oblivious.sc  a3p_random.sc  a3p_sort.sc  a3p_statistics_common.sc  a3p_statistics_distribution.sc  a3p_statistics_glm.sc  a3p_statistics_outliers.sc  a3p_statistics_regression.sc  a3p_statistics_summary.sc  a3p_statistics_testing.sc  a3p_table_database.sc  additive3pp.sc  keydb.sc  matrix.sc  oblivious.sc  profiling.sc  shared2p.sc  shared2p_random.sc  shared3p.sc  shared3p_aes.sc  shared3p_bloom.sc  shared3p_join.sc  shared3p_keydb.sc  shared3p_matrix.sc  shared3p_oblivious.sc  shared3p_oblivious_ram.sc  shared3p_permutation.sc  shared3p_random.sc  shared3p_sort.sc  shared3p_statistics_common.sc  shared3p_statistics_distribution.sc  shared3p_statistics_glm.sc  shared3p_statistics_outliers.sc  shared3p_statistics_pca.sc  shared3p_statistics_regression.sc  shared3p_statistics_summary.sc  shared3p_statistics_testing.sc  shared3p_string.sc  shared3p_table_database.sc  stdlib.sc  (+3 more)
lib/doc/: arrays.sc  code_structure.sc  control_structures.sc  data_types.sc  expressions.sc  functions.sc  main.sc  modules.sc  operator_definitions.sc  operators.sc  structs.sc  table_database.sc  tdb_vmap.sc  templates.sc  types.sc  variables.sc
tests/: emulatortestparser.py  runtests-emulator.sh  runtests.sh  sharemind-stdlib-emulator-test-parser.py  sharemind-stdlib-runtests-emulator.sh  sharemind-stdlib-runtests.sh  test_keydb.sc_temp  test_utility.sc  test_utility_float.sc  test_utility_random.sc
tests/additive3pp/: float_addition_precision_test.sc  float_division_precision_test.sc  float_erf.sc  float_erf_precision_test.sc  float_exp.sc  float_exp_precision_test.sc  float_inv.sc  float_inversion_precision_test.sc  float_inversion_precision_test2.sc  float_ln.sc  float_ln_precision_test.sc  float_matrix.sc  float_multiplication_precision_test.sc  float_oblivious.sc  float_sin.sc  float_sin_precision_test.sc  float_sqrt.sc  float_sqrt_precision_test.sc  float_subtraction_precision_test.sc  x3p_aes_test.sc
tests/public/: arithmetic_test_scalar.sc  arithmetic_test_vector.sc  comparisons_test_scalars.sc  comparisons_test_vectors.sc  matrix_test.sc  miscellaneous_test.sc  sort_test.sc  stdlib_test.sc
tests/shared3p/: a3p_bloom_test.sc  a3p_comparisons_test_scalars.sc  a3p_comparisons_test_vectors.sc  a3p_matrix_test.sc  a3p_sort_test.sc  additive3pp_test.sc  arithmetic_test_scalar.sc  arithmetic_test_vector.sc  classification_test_scalars.sc  classification_test_vectors.sc  division_test.sc  do_nothing.sc  float_addition_precision_test.sc  float_additive3pp.sc  float_arithmetic_scalar.sc  float_arithmetic_vector.sc  float_classification.sc  float_division_precision_test.sc  float_erf.sc  float_erf_precision_test.sc  float_erf_precision_test2.sc  float_exp.sc  float_exp_precision_test.sc  float_exp_precision_test2.sc  float_functions.sc  float_inv.sc  float_inversion_precision_test.sc  float_inversion_precision_test2.sc  float_inversion_precision_test3.sc  float_ln.sc  float_ln_precision_test.sc  float_ln_precision_test2.sc  float_log.sc  float_log10.sc  float_matrix.sc  float_multiplication_precision_test.sc  float_oblivious.sc  float_pow.sc  float_sin.sc  float_sin_precision_test.sc  (+20 more)
tests/shared3p/fixed_point/: fixed_point_test.sc  fixed_point_test.sc.disabled
tests/shared3p/sort/: sort_test.sc
tests/shared3p/statistics/: MAD_test.sc  contingency_table_test  covariance_test.sc  cut_test.sc  distribution_test.sc  five_number_summary_test.sc  glm_test.sc  linear_regression_test.sc  loess_test.sc  mean_test.sc  minimum_maximum_test.sc  nth_element_test.sc  nth_element_test.sc.disabled  outliers_test.sc  pca_test.sc  quantiles_test.sc  simple_linear_regression_test.sc  standard_deviation_test.sc  testing_test.sc  variance_test.sc
tests/shared3p/string/: bound_len_test.sc  carter_wegman_test.sc  find_sorting_permutation_test.sc  known_len_test.sc
tests/shared3p/table_database/: table_database_test.sc  vmap_test.sc
